Breaking changes (from main code base):
- Miner files are not backwards compatible
- Pool files are not backwards compatible
- PowerShell 7.x is required, older PowerShell versions are not longer supported

Changelog NemosMiner 3.9.9.8 Beta4 29.12.2020
=============================================

Improved:
- Web GUI / Config editor now has complete input validator

Miner Updates:
- SRBMminerMulti-v0.6.1


Changelog NemosMiner 3.9.9.8 Beta3 26.12.2020
=============================================

Fixed:
- Core: MinDataSamplesAlgoMultiplier not working if more than one algorithm is configured
- Core: Mining to donation address for too long (thanks to emike09)
- Core: Pool data still not removed after pool got deconfigured
- Core: Watchdogs not always expiring pools and algorithms
- EthMiner API: reported UbqHash hash rate with PhoenixMiner 1000x to low

Improved:
- Added more configuration options for text window content
- Added config item for CPU / GPU miners process priority
- Earnings: Predicted Payout date is more accurate
- Web GUI: Hide colums 'Profit' / 'Profit Bias' / 'PowerUsage' & 'Power Cost' if not calculating power cost

Miner Updates:
- EthMiner-v0.19.0r5
- GMiner-v2.38
- NBMiner-v35.2
- PhoenixMiner-v5.4c
- SRBMminerMulti-v0.6.0
- TeamRed-v0.7.22
- XmRig-v6.7.0

New:
- WebGUI (Config Editor): Added 'Select Mining Devices' item
- WebGUI (Config Editor): Added 'Open Firewall Ports' item


Changelog NemosMiner 3.9.9.8 Beta2 17.12.2020
=============================================

Changed:
- Pools: Removed obsolete 'protocol' property
- Legacy GUI: Removed all config settings. Use Web GUI instead
- Web GUI: Changed menu item 'Monitoring' to 'Utilities'

Fixed:
- API documentation: Repair broken links
- BMiner API: workaround for broken miner API (https://bitcointalk.org/index.php?topic=2519271.msg55744602#msg55744602)
- NBMiner: Fixed device selection
- Core: Allow 0W power usage readout from miner (and do not loop forever)